esquema de autenticacao, geracao de access token e controle de usuarios
