# docs/swagger.json
@@ -8,6 +8,33 @@
         "version": "1.0"
     },
     "paths": {
+        "/auth/token": {
+            "post": {
+                "description": "Generate a new access token",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "token"
+                ],
+                "summary": "Generate a new access token",
+                "parameters": [
+                    {
+                        "description": "the request body for token generation",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/usecase.GenerateTokenInput"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/v1/gifts": {
             "post": {
                 "description": "Create a new gift",
@@ -45,7 +72,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "gifts"
+                    "transactions"
                 ],
                 "summary": "Create a new payment",
                 "parameters": [
@@ -56,6 +83,33 @@
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/usecase.ProcessPaymentInput"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/v1/users": {
+            "post": {
+                "description": "Create a new user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Create a new user",
+                "parameters": [
+                    {
+                        "description": "the request body for user creation",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/usecase.CreateUserInput"
                         }
                     }
                 ],
@@ -75,6 +129,34 @@
                     "type": "string"
                 },
                 "recipient": {
+                    "type": "string"
+                }
+            }
+        },
+        "usecase.CreateUserInput": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "fullName": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "usecase.GenerateTokenInput": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "username": {
                     "type": "string"
                 }
             }
