# main.go
@@ -14,6 +14,7 @@ import (
 	"github.com/jpmoraess/gift-api/internal/infra/gateway"
 	"github.com/jpmoraess/gift-api/internal/infra/handlers"
 	"github.com/jpmoraess/gift-api/internal/infra/persistence"
+	"github.com/jpmoraess/gift-api/token"
 	"log"
 	"net/http"
 )
@@ -43,6 +44,12 @@ func main() {
 		log.Fatal(err)
 	}
 
+	// token maker
+	tokenMaker, err := token.NewPasetoMaker([]byte(config.SymmetricKey))
+	if err != nil {
+		log.Fatal(err)
+	}
+
 	// store
 	store := db.NewStore(pool)
 
@@ -57,10 +64,13 @@ func main() {
 
 	// repository
 	giftRepository := persistence.NewGiftRepositoryAdapter(store)
+	userRepository := persistence.NewUserRepositoryAdapter(store)
 	transactionRepository := persistence.NewTransactionRepositoryAdapter(store)
 
 	// usecase
 	createGift := usecase.NewCreateGift(giftRepository)
+	createUser := usecase.NewCreateUser(userRepository)
+	generateToken := usecase.NewGenerateToken(tokenMaker, userRepository)
 	processPayment := usecase.NewProcessPayment(paymentProcessor, transactionRepository)
 
 	// fiber
@@ -71,11 +81,21 @@ func main() {
 
 	// handlers
 	giftHandler := handlers.NewGiftHandler(createGift)
+	userHandler := handlers.NewUserHandler(createUser)
+	tokenHandler := handlers.NewTokenHandler(generateToken)
 	transactionHandler := handlers.NewTransactionHandler(processPayment)
 
 	// routes
+	app.Post("/auth/token", func(c *fiber.Ctx) error {
+		return tokenHandler.GenerateToken(c)
+	})
+
 	app.Post("/v1/gifts", func(c *fiber.Ctx) error {
 		return giftHandler.CreateGift(c)
+	})
+
+	app.Post("/v1/users", func(c *fiber.Ctx) error {
+		return userHandler.CreateUser(c)
 	})
 
 	app.Post("/v1/transactions", func(c *fiber.Ctx) error {
